# BabyTime

./: .env.example  .gitignore  README-setup.md  STUDY_GUIDE.md  Todo.md  build-and-run.sh  install.sh  pyproject.toml  run.sh  server.py
babytime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: ensure-certs.sh
static/: audioChart.js  audioVisualizer.js  audio_level_bars.html  base.css  camera.html  camera.js  index.html  menubar.html  setup.html  shared-utils.js  slowviewer.html  slowviewer.js  viewer.html  viewer.js
